# netplan

./: .editorconfig  .gcovr  .gitignore  .readthedocs.yaml  .woke.yaml  .wokeignore  CONTRIBUTING  Doxyfile  HACKING.md  Makefile  README.md  SECURITY.md  TODO  abicompat.lds  blacklist  blacklist.yaml  features_h_generator.sh  features_py_generator.sh  gcovr.cfg  meson.build  meson_options.txt  netplan-configure.service  netplan.completions  spread.yaml  test.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  codecov.yml  pull_request_template.md
.github/workflows/: automatic-doc-checks.yml  autopkgtest.yml  build-abi.yml  build.yml  (+13 more)
abi-compat/: README.md  focal_0.104.xml  impish_0.104.xml  jammy_0.104.xml  jammy_0.105.xml  jammy_0.106.xml  jammy_0.107.xml  jammy_1.0.xml  noble_1.1.xml  resolute_1.2.xml  suppressions.abignore
data/: meson.build  netplan-generator.service  netplan-networkd-wait-online@.service  netplan.service  ubuntu-network.service
dbus/: io.netplan.Netplan.conf  io.netplan.Netplan.service.in  meson.build
debian/: changelog  control  copyright  dirs  docs  gbp.conf  netplan.io.install  postinst  watch
doc/: .custom_wordlist.txt  .gitignore  .wokeignore  .wordlist.txt  Makefile  README.md  cli.md  conf.py  contribute-docs.md  dbus-config.md  example-config  examples.md  explanation.md  generator.md  howto.md  index.md  manpage-footer.md  manpage-header.md  meson.build  multi-nic-vm-host-with-bonds-and-vlans.md  netplan-apply.md  netplan-dbus.md  netplan-everywhere.md  netplan-generate.md  netplan-get.md  netplan-info.md  netplan-ip.md  netplan-rebind.md  netplan-set.md  netplan-status.md  netplan-try.md  netplan-tutorial.md  netplan-validate.md  netplan-yaml.md  netplan.md  nm-all.md  redirects.txt  reference.md  requirements.txt  security.md  (+7 more)
doc/.sphinx/: requirements.txt  spellingcheck.yaml
doc/.sphinx/_static/: custom.css  furo_colors.css  github_issue_links.js  redirect.js
doc/.sphinx/_templates/: footer.html  header.html
doc/apidoc/: inc-netplan.md  inc-types.md  index.md
doc/explanation/: index.md  nm-all.md  security.md  structure-id.md
doc/howto/: creating-link-aggregation.md  dbus-config.md  examples.md  index.md  matching-interface-by-mac-address.md  multi-nic-vm-host-with-bonds-and-vlans.md  single-nic-vm-host-with-vlans.md  single-nic-vm-host.md
doc/reference/: index.md  netplan-apply.md  netplan-dbus.md  netplan-info.md  netplan-ip.md  netplan-set.md  netplan-status.md  netplan-yaml.md
doc/reference/apidoc/: inc-netdef.md  inc-parse-nm.md  inc-parse.md  inc-state.md  inc-util.md
doc/reuse/: configure-vm-check-networking-delete-default.md  configure-vm-create-bridged-networks.md  configure-vm-disable-netfilter.md  configure-vm-prerequisites-system.md  configure-vm-prerequisites.txt  configure-vm-using-virsh.md  links.txt
doc/tutorial/: index.md  netplan-tutorial.md
docs/: Makefile  conf.py  index.md  reference.md  spelling_wordlist.txt
examples/: bonding.yaml  bonding_router.yaml  bridge_port_vlans.yaml  bridge_vlan.yaml  cffi-bindings.py  dbus_config_scenario.txt  dhcp_wired8021x.yaml  direct_connect_gateway.yaml  direct_connect_gateway_ipv6.yaml  dummy-devices.yaml  infiniband.yaml  ipv6_tunnel.yaml  meson.build  modem.yaml  offload.yaml  openvswitch.yaml  route_metric.yaml  source_routing.yaml  source_routing_with_blackhole.yaml  sriov.yaml  sriov_vlan.yaml  static-routes.yaml  static.yaml  static_multiaddress.yaml  static_singlenic_multiip_multigateway.yaml  virtual-ethernet.yaml  vlan.yaml  vrf.yaml  vxlan.yaml  wireguard.yaml  wireless.yaml  wireless_adhoc.yaml  wireless_wpa3.yaml  wireless_wpa_psk.yaml  wpa3_enterprise.yaml  wpa_enterprise.yaml
include/: abi.h  meson.build  netdef.h  netplan.h  parse-nm.h  parse.h  state.h  types.h  util.h
netplan/: __init__.py  configmanager.py  libnetplan.py  meson.build  terminal.py
netplan/cli/: __init__.py  core.py  ovs.py  sriov.py  state.py  utils.py
netplan/cli/commands/: __init__.py  apply.py  generate.py  get.py  ifupdown_migrate.py  info.py  ip.py  migrate.py  set.py  sriov_rebind.py  status.py  try_command.py  validate.py
netplan_cli/: __init__.py  configmanager.py  libnetplan.py  meson.build  terminal.py
python-cffi/: meson.build
python-cffi/netplan/: __init__.py  _build_cffi.py  _utils.py  meson.build  netdef.py  parser.py  state.py
rpm/: meson-python-no-limited-api.diff  netplan.spec
snap/: snapcraft.yaml
src/: .parse.h.swp  abi.h  abi_compat.c  configure.c  dbus.c  emit.c  error.c  error.h  gen-networkd.c  gen-openvswitch.c  gen-sriov.c  generate.c  ifupdown2.c  ifupdown2.h  meson.build  names.c  names.h  netdef.c  netplan  netplan-wpa-wired@.service  netplan-wpa@.service  netplan-yaml.c  netplan-yaml.h  netplan.c  netplan.h  netplan.script  netplan.target  networkd.c  networkd.h  nm-keyfile.c  nm-keyfile.h  nm.c  nm.h  openvswitch.c  openvswitch.h  parse-globals.h  parse-nm.c  parse-nm.h  parse.c  parse.h  (+15 more)
src/tests/: meson.build  test_netplan_error.c  test_netplan_misc.c  test_netplan_parser.c  test_netplan_state.c
src/tests/fixtures/: bond.yaml  ovs2.yaml
systemd/: netplan-pre-config.service  netplan-sriov-setup.service
tests/: cli.py  cli_legacy.py  generate.py  integration.py  internals.py  test_cli.py  test_cli_get_set.py  test_cli_status.py  test_cli_units.py  test_configmanager.py  test_generate.py  test_libnetplan.py  test_nm_backend.py  test_ovs.py  test_serialize.py  test_sriov.py  test_terminal.py  test_utils.py  utils.py  validate_docs.sh
tests/ctests/: build.sh  meson.build  meson_options.txt  test_netplan_deprecated.c  test_netplan_error.c  test_netplan_keyfile.c  test_netplan_misc.c  test_netplan_networkd.c  test_netplan_nm.c  test_netplan_openvswitch.c  test_netplan_parser.c  test_netplan_state.c  test_netplan_validation.c  test_utils.h  test_utils_keyfile.h
tests/ctests/fixtures/: bridge.yaml  invalid_route.yaml  missing_interface.yaml  nullable.yaml  optional.yaml  sriov.yaml
tools/: completely.yaml  diff.py  grep_cryptography.sh  keyfile_to_yaml.c  keyfile_to_yaml.py  run_asan.sh
(+97 files in other folders)
